Migrate to SpringBoot 4.1